# mistral-7b-text-generation

./: README.md  important.txt  main.py  pyproject.toml
